--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ readme = "README.md"
 dependencies=[
     "setuptools>69",
     "setuptools<70.1;python_version<='3.8'",
-    "grpcio>=1.66.2,<1.68.0", #issue https://github.com/milvus-io/pymilvus/issues/2358
+    "grpcio>=1.66.2,!=1.68.0,!=1.68.1,!=1.69.0,!=1.70.0,!=1.70.1,!=1.71.0,!=1.72.1,!=1.73.0",
     "protobuf>=5.27.2", # aligned with grpcio-tools generated codes
     "python-dotenv>=1.0.1, <2.0.0",
     "ujson>=2.0.0",
@@ -38,6 +38,7 @@ classifiers=[
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "License :: OSI Approved :: Apache Software License",
 ]
 
