--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,14 @@ dev = [
     "pytest-timeout>=1.3.4",
     "ruff>0.4.0",
     "black",
+    # develop bulk_writer
+    "requests",
+    "minio>=7.0.0",
+    "pyarrow>=12.0.0",
+    "azure-storage-blob",
+    # develop stage
+    "urllib3",
+    "scipy",
 ]
 
 [tool.setuptools.dynamic]
