--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,16 +66,15 @@ dev = [
     "grpcio-tools==1.66.2",
     "grpcio-testing==1.66.2",
     "pytest>=5.3.4",
-    "pytest-cov>=2.8.1",
+    "pytest-cov>=6.2.1",
     "pytest-timeout>=1.3.4",
-    "ruff>0.4.0",
+    "ruff>=0.12.9,<1",
     "black",
     # develop bulk_writer
     "requests",
     "minio>=7.0.0",
     "pyarrow>=12.0.0",
     "azure-storage-blob",
-    # develop stage
     "urllib3",
     "scipy",
 ]
