--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,10 +66,17 @@ dev = [
     "grpcio-tools==1.66.2",
     "grpcio-testing==1.66.2",
     "pytest>=5.3.4",
-    "pytest-cov>=2.8.1",
+    "pytest-cov>=5.0.0",
     "pytest-timeout>=1.3.4",
-    "ruff>0.4.0",
+    "ruff>=0.12.9,<1",
     "black",
+    # develop bulk_writer
+    "requests",
+    "minio>=7.0.0",
+    "pyarrow>=12.0.0",
+    "azure-storage-blob",
+    "urllib3",
+    "scipy",
 ]
 
 [tool.setuptools.dynamic]
@@ -171,7 +178,6 @@ exclude = [
     "grpc_gen",
     "__pycache__",
     "pymilvus/client/stub.py",
-    "tests",
 ]
 
 # Same as Black.
