--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -5,5 +5,5 @@ log_level = debug
 
 log_cli = 1
 log_cli_level = debug
-log_cli_format = %(asctime) s [%(levelname) 8s] %(message) s (%(filename) s:%(lineno) s)
+log_cli_format = %(asctime) s [%(levelname)s] %(message) s (%(filename) s:%(lineno) s)
 log_cli_date_format=%Y-%m-%d %H:%M:%S
