--- a/tests/ruff.toml
+++ b/tests/ruff.toml
@@ -9,6 +9,10 @@ extend-ignore = [
     "S101",     # Use of assert detected - OK in tests
     "S105",     # Possible hardcoded password - OK in tests
     "S106",     # Possible hardcoded password - OK in tests
+    "S108",
+    "N806",
+    "SIM118",
+    "SIM117",
     "ARG001",   # Unused function argument - common in fixtures
     "ARG002",   # Unused method argument - common in test fixtures
     "PLR2004",  # Magic value comparisons - common in tests
@@ -28,9 +32,12 @@ extend-ignore = [
     "TRY003",   # Long exception messages - OK in tests
     "EM101",    # Exception must not use string literal - OK in tests
     "EM102",    # Exception must not use f-string literal - OK in tests
+    "F403",
     "C901",     # Too complex - complexity is OK in test setup
     "PLR0912",  # Too many branches - OK in complex test scenarios
     "PLR0915",  # Too many statements - OK in test setup
+    "W505",
+    "S311",
 ]
 
 # You can also be more selective with rules
