--- a/.github/workflows/update-milvus-pymilvus-dev.yml
+++ b/.github/workflows/update-milvus-pymilvus-dev.yml
@@ -44,7 +44,7 @@ jobs:
       id: version
       run: |
         python -m pip install setuptools_scm --user
-        VERSION=$(python -c "import _version_helper; print(_version_helper.get_version())")
+        VERSION=$(python -c "import _version_helper; print(_version_helper.version))")
         echo "latest=$VERSION" >> $GITHUB_OUTPUT
         echo "Detected version: $VERSION"
 
@@ -106,7 +106,7 @@ jobs:
       run: |
         set -euo pipefail
         cd milvus-upstream
-        remote="https://x-access-token:${TOKEN}@github.com/${{ vars.REPO_FORK }}.git"
+        remote="https://${TOKEN}@github.com/${{ vars.REPO_FORK }}.git"
         git remote add fork "$remote"
         git push -u fork "$BRANCH"
 
