--- a/.github/workflows/update-milvus-pymilvus-dev.yml
+++ b/.github/workflows/update-milvus-pymilvus-dev.yml
@@ -44,7 +44,7 @@ jobs:
       id: version
       run: |
         python -m pip install setuptools_scm --user
-        VERSION=$(python -c "import _version_helper; print(_version_helper.version))")
+        VERSION=$(python -c "import _version_helper; print(_version_helper.version)")
         echo "latest=$VERSION" >> $GITHUB_OUTPUT
         echo "Detected version: $VERSION"
 
