--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [build-system]
 requires = [
-  "setuptools >= 67",
+  "setuptools >= 78.1.1; python_version >= '3.9'",
+  "setuptools <= 75.3.2; python_version == '3.8'",
   "wheel",
   "gitpython",
   "setuptools_scm[toml]>=6.2",
@@ -20,8 +21,8 @@ requires-python = '>=3.8'
 description = "Python Sdk for Milvus"
 readme = "README.md"
 dependencies=[
-    "setuptools>69",
-    "setuptools<70.1;python_version<='3.8'",
+    "setuptools <= 75.3.2; python_version == '3.8'",
+    "setuptools >= 78.1.1; python_version >= '3.9'",
     "grpcio>=1.66.2,!=1.68.0,!=1.68.1,!=1.69.0,!=1.70.0,!=1.70.1,!=1.71.0,!=1.72.1,!=1.73.0",
     "protobuf>=5.27.2", # aligned with grpcio-tools generated codes
     "python-dotenv>=1.0.1, <2.0.0",
