enhance: Make pr to fix the empty head error
fix this: pull request create failed: GraphQL: Head sha can't be blank,
Base sha can't be blank, Head repository can't be blank, No commits
between milvus-io:master and
Milvus:bot/pymilvus-update-for-master-2.7.0.rc19-20250827110012, Head
ref must be a branch, not all refs are readable

And sign-off the commit

Signed-off-by: yangxuan <xuan.yang@zilliz.com>

--- a/.github/workflows/update-milvus-pymilvus-dev.yml
+++ b/.github/workflows/update-milvus-pymilvus-dev.yml
@@ -106,7 +106,7 @@ jobs:
         set -euo pipefail
         cd milvus-upstream
         git add tests/python_client/requirements.txt
-        git commit -m "test: Increase PyMilvus version to ${{ steps.version.outputs.latest }}"
+        git commit -sm "test: Increase PyMilvus version to ${{ steps.version.outputs.latest }}"
 
 
     - name: Push to fork
@@ -130,6 +130,10 @@ jobs:
         set -euo pipefail
         title="test: Increase PyMilvus version to ${{ steps.version.outputs.latest }} for ${{ matrix.branch }} branch"
         body="Automated daily bump from pymilvus ${{ matrix.branch }} branch. Updates tests/python_client/requirements.txt."
-        head="$(echo ${{ vars.REPO_FORK }} | cut -d'/' -f2):${BRANCH}"
+        head="$(echo ${{ vars.REPO_FORK }} | cut -d'/' -f1):${BRANCH}"
         base="${{ matrix.branch }}"
+        echo "title=$title"
+        echo "body=$body"
+        echo "head=$head"
+        echo "base=$base"
         gh pr create --repo milvus-io/milvus --title "$title" --body "$body" --head "$head" --base "$base"
