--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ dev = [
     "pytest>=5.3.4",
     "pytest-cov>=5.0.0",
     "pytest-timeout>=1.3.4",
+    "pytest-asyncio",
     "ruff>=0.12.9,<1",
     "black",
     # develop bulk_writer
