--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,8 @@ dev = [
     "pytest>=5.3.4",
     "pytest-cov>=2.8.1",
     "pytest-timeout>=1.3.4",
-    "ruff>0.4.0",
+    "pytest-asyncio",
+    "ruff>=0.12.9,<1",
     "black",
 ]
 
