enhance: Sync PyMilvus milvus-proto commit to v2.6.2
- enhance: Make milvus-lite an optional dependency (#2976)

this PR is a possible implementation addressing this
https://github.com/milvus-io/pymilvus/issues/2975

Co-authored-by: Jagath Jai Kumar <jagath@xyla.com>
Signed-off-by: yangxuan <xuan.yang@zilliz.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,6 @@ dependencies=[
     "ujson>=2.0.0",
     "pandas>=1.2.4",
     "numpy<1.25.0;python_version<='3.8'",
-    "milvus-lite>=2.4.0;sys_platform!='win32'",
 ]
 
 classifiers=[
@@ -58,6 +57,10 @@ bulk_writer = [
 
 model = [
     "pymilvus.model>=0.3.0",
+]
+
+milvus_lite = [
+    "milvus-lite>=2.4.0;sys_platform!='win32'",
 ]
 
 dev = [
