--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,9 +24,9 @@ dependencies=[
     "setuptools <= 75.3.2; python_version == '3.8'",
     "setuptools >= 78.1.1; python_version >= '3.9'",
     "grpcio>=1.66.2,!=1.68.0,!=1.68.1,!=1.69.0,!=1.70.0,!=1.70.1,!=1.71.0,!=1.72.1,!=1.73.0",
+    "orjson>=3.10.15", # orjson 3.10.15 is the last version to support python3.8
     "protobuf>=5.27.2", # aligned with grpcio-tools generated codes
     "python-dotenv>=1.0.1, <2.0.0",
-    "ujson>=2.0.0",
     "pandas>=1.2.4",
     "numpy<1.25.0;python_version<='3.8'",
 ]
