--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "pymilvus/grpc_gen/milvus-proto"]
 	path = pymilvus/grpc_gen/milvus-proto
-	url = /home/xtx/ospp/milvus-proto
+	url = https://github.com/milvus-io/milvus-proto.git
