--- a/.github/workflows/publish_dev_package.yml
+++ b/.github/workflows/publish_dev_package.yml
@@ -6,38 +6,88 @@ on:
       - master
 
 jobs:
-  build-n-publish:
-    name: Build and publish Python 🐍 distributions 📦 to TestPyPI
-    runs-on: ubuntu-latest
-    environment: testpypi
-    permissions:
-      id-token: write
+  build_wheels:
+    name: Build wheels on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-13, macos-14]
 
     steps:
     - name: Check out from Git
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    
     - name: Get history and tags for SCM versioning
       run: |
-          git fetch --prune --unshallow
-          git fetch --depth=1 origin +refs/tags/*:refs/tags/*
-    - name: Set up Python 3.13
+        git fetch --prune --unshallow || true
+        git fetch --depth=1 origin +refs/tags/*:refs/tags/* || true
+    
+    - name: Build wheels
+      uses: pypa/cibuildwheel@v2.21.3
+      env:
+        CIBW_BUILD_VERBOSITY: 1
+    
+    - name: Upload wheels
+      uses: actions/upload-artifact@v4
+      with:
+        name: wheels-${{ matrix.os }}
+        path: ./wheelhouse/*.whl
+
+  build_sdist:
+    name: Build source distribution
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Check out from Git
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    
+    - name: Get history and tags for SCM versioning
+      run: |
+        git fetch --prune --unshallow || true
+        git fetch --depth=1 origin +refs/tags/*:refs/tags/* || true
+    
+    - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: 3.13
-    - name: Install pypa/build
-      run: >-
-        python -m
-        pip install
-        build
-        --user
-    - name: Build a binary wheel and a source tarball
-      run: >-
-        python -m
-        build
-        --sdist
-        --wheel
-        --outdir dist/
-        .
+        python-version: '3.13'
+    
+    - name: Build sdist
+      run: |
+        python -m pip install build
+        python -m build --sdist --outdir dist/
+    
+    - name: Upload sdist
+      uses: actions/upload-artifact@v4
+      with:
+        name: sdist
+        path: dist/*.tar.gz
+
+  upload_testpypi:
+    name: Upload to TestPyPI
+    needs: [build_wheels, build_sdist]
+    runs-on: ubuntu-latest
+    environment: testpypi
+    permissions:
+      id-token: write
+    
+    steps:
+    - name: Download all artifacts
+      uses: actions/download-artifact@v4
+      with:
+        pattern: wheels-*
+        merge-multiple: true
+        path: dist/
+    
+    - name: Download sdist
+      uses: actions/download-artifact@v4
+      with:
+        name: sdist
+        path: dist/
+    
     - name: Publish distribution 📦 to Test PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
