--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,6 @@ requires = [
   "wheel",
   "gitpython",
   "setuptools_scm[toml]>=6.2",
-  "Cython>=3.0.0",
 ]
 build-backend = "setuptools.build_meta"
 
@@ -74,7 +73,6 @@ dev = [
     "pytest-cov>=5.0.0",
     "pytest-timeout>=1.3.4",
     "pytest-asyncio",
-    "pytest-benchmark[histogram]",
     "Cython>=3.0.0",
     "ruff>=0.12.9,<1",
     "black",
@@ -85,6 +83,10 @@ dev = [
     "azure-storage-blob",
     "urllib3",
     "scipy",
+    # develop benchmark
+    "py-spy",
+    "memray",
+    "pytest-benchmark[histogram]",
 ]
 
 [tool.setuptools.dynamic]
@@ -218,18 +220,3 @@ builtins-ignorelist = [
     "filter",
 ]
 builtins-allowed-modules = ["types"]
-
-[tool.cibuildwheel]
-build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]
-skip = ["*-musllinux_*", "pp*"]
-test-requires = "pytest"
-test-command = "pytest {package}/tests -k 'not (test_hybrid_search or test_milvus_client)' -x --tb=short || true"
-
-[tool.cibuildwheel.linux]
-before-all = "yum install -y gcc || apt-get update && apt-get install -y gcc"
-
-[tool.cibuildwheel.macos]
-before-all = "brew install gcc || true"
-
-[tool.cibuildwheel.windows]
-before-build = "pip install Cython>=3.0.0"
