skip install memray if its windows platform
Signed-off-by: yangxuan <xuan.yang@zilliz.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,7 +85,7 @@ dev = [
     "scipy",
     # develop benchmark
     "py-spy",
-    "memray",
+    "memray;sys_platform!='win32'",
     "pytest-benchmark[histogram]",
 ]
 
