Support nullable vectors in Python SDK
Signed-off-by: marcelo-cjl <marcelo.chen@zilliz.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,6 +87,7 @@ dev = [
     "py-spy",
     "memray;sys_platform!='win32'",
     "pytest-benchmark[histogram]",
+    "ml_dtypes",
 ]
 
 [tool.setuptools.dynamic]
