fix: address PR #3251 review comments
- Integrate _handle_global_connection_error into retry_on_rpc_failure
  decorator so UNAVAILABLE errors trigger topology refresh for global
  connections (critical fix)
- Extract "global-cluster" to GLOBAL_CLUSTER_IDENTIFIER constant
- Fix type hints: Optional[callable] -> Optional[Callable]
- Add exc_info=True to exception logging for better debugging
- Add requests to main dependencies in pyproject.toml
- Update design doc: add metadata, clarify integration point with
  callback-based implementation, clarify MilvusException usage
- Improve test reliability: replace time.sleep with threading.Event,
  add decorator integration tests

Signed-off-by: bigsheeper <yihao.dai@zilliz.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies=[
     "pandas>=1.2.4",
     "numpy<1.25.0;python_version<='3.8'",
     "cachetools>=5.0.0",
+    "requests>=2.20.0",
 ]
 
 classifiers=[
